Added jwt package

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
 			<version>30.0-jre</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
 
 
 
